Changed the early life section to about section. - Adjusted the layout of the About section to ensure the left and right content align properly with the center circle. - Increased the size of the circular container to provide a better visual presentation. - Added new images to the circular container to enhance the visual appeal. - Updated CSS rules for the .about-container class to maintain equal breathing margin space for left and right content. - Fixed minor alignment issues in the left-about and right-about divs.
Used flex box to position containers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
     color: #3a3a3a;
 }
 
+
 /* heading and logo */
 
 
@@ -129,30 +130,35 @@ h1 {
     }
 }
 
-/* Early Life */
+/* About */
 
-#early-life {
+#about {
     height: 600px;
 }
 
+.about-container {
+    display: flex;
+    justify-content: center; 
+    
+}
+
 #left-about {
-    padding-top: 30px;
-    width: 33%;
-    float: left;
+    padding-top: 25px;
+    flex: 1;
+    margin-left: 38px;
 }
 
 #right-about {
-    padding-top: 30px;
-    width: 33%;
-    float: right;
-    background-color: silver;
+    padding-top: 25px;
+    flex: 1;
+    margin-left: 20px;
 }
 
 #center-about {
     padding-top: 20px;
-        width: 33%;
-        margin: 0 auto;
-        background-color: green;
+    flex: 1;
+    display: flex;
+    justify-content: center; 
 }
 
 hr {
@@ -161,28 +167,59 @@ hr {
     margin: 5px 0;
 }
 
+.custom-hr {
+    border: none;
+    height: 2px;
+    background-color: #ff0000;
+    margin: 10px 0;  
+}
+
 .left-about-heading {
     width: 90%;
-    float: right;
     line-height: 30px;
-    clear: both;
     margin-bottom: 20px;
-
 }
 
 .right-about-heading {
     width: 90%;
-    float: left;
     line-height: 30px;
-    clear: both;
     margin-bottom: 20px;
-
-}
-
-.right-about-heading h2 {
     text-align: right;
 }
 
 .right-about-heading p {
     text-align: right;
 }
+
+.right-about-heading h2 {
+    text-align: right;
+}
+
+#introduction {
+    text-align: center;
+    margin: 20px 0;
+    color: #FF0000;
+    font-size: 150%;
+}
+
+/* about center image */
+
+#circle-container {
+    width: 350px;
+    height: 350px;
+    padding: 20px;
+    border: 1px solid #cccccc;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+ #circle-cover-bg {
+    background: url('../images/2-Star-Square.jpg') no-repeat center center;
+    background-size: cover;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+    border-radius: 50%;
+    margin: 0 auto;
+    
+ }
+
